Grunt still needs work, Compass dev is hanging and not proceeding to watch command.

--- a/development/index.html
+++ b/development/index.html
@@ -3,10 +3,45 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>Camarero - A CSS Framework </title>
-<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
+<!--
+div.row>((div.colMd-n{.col-Md-n})*n)
+-->
+<div class="wrapper gridBasicDemo">
+	<div class="row">
+		<div class="col md-1">.col md-1</div>
+		<div class="col md-1">.col md-1</div>
+		<div class="col md-1">.col md-1</div>
+		<div class="col md-1">.col md-1</div>
+		<div class="col md-1">.col md-1</div>
+		<div class="col md-1">.col md-1</div>
+		<div class="col md-1">.col md-1</div>
+		<div class="col md-1">.col md-1</div>
+		<div class="col md-1">.col md-1</div>
+		<div class="col md-1">.col md-1</div>
+		<div class="col md-1">.col md-1</div>
+		<div class="col md-1">.col md-1</div>
+	</div>
+	<div class="row">
+		<div class="col md-6">.col- md-6</div>
+		<div class="col md-6">.col- md-6</div>
+	</div>
+	<div class="row">
+		<div class="col md-4">.col md-4</div>
+		<div class="col md-4">.col md-4</div>
+		<div class="col md-4">.col md-4</div>
+	</div>
+	<div class="row">
+		<div class="col md-3">.col md-3</div>
+		<div class="col md-3">.col md-3</div>
+		<div class="col md-3">.col md-3</div>
+		<div class="col md-3">.col md-3</div>
+	</div>
+</div>
+
 
 
 <script src="http://localhost:35729/livereload.js"></script>
