Grunt hammered out. Basic grid begun...

--- a/development/index.html
+++ b/development/index.html
@@ -12,7 +12,13 @@ div.row>((div.colMd-n{.col-Md-n})*n)
 -->
 <div class="wrapper gridBasicDemo">
 	<div class="row">
-		<div class="col md-1">.col md-1</div>
+		<div class="col md-1">
+			<div>
+				<img style="height:100px; width:100px; float:left; background:none #333;" />
+				<p>Blah blah blah</p>
+			</div>
+
+		</div>
 		<div class="col md-1">.col md-1</div>
 		<div class="col md-1">.col md-1</div>
 		<div class="col md-1">.col md-1</div>
