Basic grid structure set.

--- a/development/index.html
+++ b/development/index.html
@@ -4,6 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>Camarero - A CSS Framework </title>
 <link rel="stylesheet" href="css/styles.css">
+<script src="js/lib/respond/respond.min.js"></script>
 </head>
 
 <body>
@@ -30,13 +31,19 @@ div.row>((div.colMd-n{.col-Md-n})*n)
 		<div class="col md-1">.col md-1</div>
 		<div class="col md-1">.col md-1</div>
 		<div class="col md-1">.col md-1</div>
+
 	</div>
 	<div class="row">
 		<div class="col md-6">.col- md-6</div>
 		<div class="col md-6">.col- md-6</div>
 	</div>
 	<div class="row">
-		<div class="col md-4">.col md-4</div>
+		<div class="col md-4">
+			<div class="row">
+				<div class="col md-6">.col- md-6</div>
+				<div class="col md-6">.col- md-6</div>
+			</div>
+		</div>
 		<div class="col md-4">.col md-4</div>
 		<div class="col md-4">.col md-4</div>
 	</div>
