--- a/development/index.html
+++ b/development/index.html
@@ -4,6 +4,14 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>Camarero - A CSS Framework </title>
 <link rel="stylesheet" href="css/styles.css">
+<style>
+	.gridBasicDemo{
+		margin-top: 25px;
+	}
+	.gridBasicDemo .md-1{
+		height:100px;
+	}
+</style>
 <script src="js/lib/respond/respond.min.js"></script>
 </head>
 
@@ -13,45 +21,345 @@ div.row>((div.colMd-n{.col-Md-n})*n)
 -->
 <div class="wrapper gridBasicDemo">
 	<div class="row">
-		<div class="col md-1">
+		<div class="col md-1"></div>
+		<div class="col md-1"></div>
+		<div class="col md-1"></div>
+		<div class="col md-1"></div>
+		<div class="col md-1"></div>
+		<div class="col md-1"></div>
+		<div class="col md-1"></div>
+		<div class="col md-1"></div>
+		<div class="col md-1"></div>
+		<div class="col md-1"></div>
+		<div class="col md-1"></div>
+		<div class="col md-1"></div>
+	</div>
+
+	<!-- BEGIN TWO COLUMN COMBINATIONS-->
+	<div class="row">
+		<div class="col md-1"></div>
+		<div class="col md-11">
+			<div>
+				<img style="height:100px; width:100px; float:left; background:none #333;" />
+				<p>Blah blah blah</p>
+				<ul>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col md-2"></div>
+		<div class="col md-10">
+			<div>
+				<img style="height:100px; width:100px; float:left; background:none #333;" />
+				<p>Blah blah blah</p>
+				<ul>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col md-3">
+			<div>
+				<img style="height:100px; width:100px; float:left; background:none #333;" />
+				<p>Blah blah blah</p>
+				<ul>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+				</ul>
+			</div>
+		</div>
+		<div class="col md-9">
+			<div>
+				<img style="height:100px; width:100px; float:left; background:none #333;" />
+				<p>Blah blah blah</p>
+				<ul>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col md-4">
+			<div>
+				<img style="height:100px; width:100px; float:left; background:none #333;" />
+				<p>Blah blah blah</p>
+				<ul>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+				</ul>
+			</div>
+		</div>
+		<div class="col md-8">
+			<div>
+				<img style="height:100px; width:100px; float:left; background:none #333;" />
+				<p>Blah blah blah</p>
+				<ul>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col md-5">
+			<div>
+				<img style="height:100px; width:100px; float:left; background:none #333;" />
+				<p>Blah blah blah</p>
+				<ul>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+				</ul>
+			</div>
+		</div>
+		<div class="col md-7">
+			<div>
+				<img style="height:100px; width:100px; float:left; background:none #333;" />
+				<p>Blah blah blah</p>
+				<ul>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col md-6">
+			<div>
+				<img style="height:100px; width:100px; float:left; background:none #333;" />
+				<p>Blah blah blah</p>
+				<ul>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+				</ul>
+			</div>
+		</div>
+		<div class="col md-6">
+			<div>
+				<img style="height:100px; width:100px; float:left; background:none #333;" />
+				<p>Blah blah blah</p>
+				<ul>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
+	<!--END TWO COLUMN COMBINATIONS-->
+
+	<!--BEGIN THREE COLUMN COMBINATIONS-->
+	<div class="row">
+		<div class="col md-6">
+			<div>
+				<img style="height:100px; width:100px; float:left; background:none #333;" />
+				<p>Blah blah blah</p>
+				<ul>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+				</ul>
+			</div>
+		</div>
+		<div class="col md-3">
+			<div>
+				<img style="height:100px; width:100px; float:left; background:none #333;" />
+				<p>Blah blah blah</p>
+				<ul>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+				</ul>
+			</div>
+		</div>
+		<div class="col md-3">
+			<div>
+				<img style="height:100px; width:100px; float:left; background:none #333;" />
+				<p>Blah blah blah</p>
+				<ul>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col md-6">
+			<div>
+				<img style="height:100px; width:100px; float:left; background:none #333;" />
+				<p>Blah blah blah</p>
+				<ul>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+				</ul>
+			</div>
+		</div>
+		<div class="col md-4">
+			<div>
+				<img style="height:100px; width:100px; float:left; background:none #333;" />
+				<p>Blah blah blah</p>
+				<ul>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+				</ul>
+			</div>
+		</div>
+		<div class="col md-2">
+			<div>
+				<img style="height:100px; width:100px; float:left; background:none #333;" />
+				<p>Blah blah blah</p>
+				<ul>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col md-3">
+			<div>
+				<img style="height:100px; width:100px; float:left; background:none #333;" />
+				<p>Blah blah blah</p>
+				<ul>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+				</ul>
+			</div>
+		</div>
+		<div class="col md-6">
+			<div>
+				<img style="height:100px; width:100px; float:left; background:none #333;" />
+				<p>Blah blah blah</p>
+				<ul>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+				</ul>
+			</div>
+		</div>
+		<div class="col md-3">
+			<div>
+				<img style="height:100px; width:100px; float:left; background:none #333;" />
+				<p>Blah blah blah</p>
+				<ul>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
+
+	<!--END THREE COLUMN COMBINATIONS-->
+	<div class="row">
+		<div class="col md-6">
+			<div>
+				<img style="height:100px; width:100px; float:left; background:none #333;" />
+				<p>Blah blah blah</p>
+				<ul>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+					<li><a href="#">Link</a></li>
+				</ul>
+			</div>
+		</div>
+		<div class="col md-6">			<div>
+				<img style="height:100px; width:100px; float:left; background:none #333;" />
+				<p>Blah blah blah</p>
+			</div></div>
+	</div>
+	<div class="row">
+		<div class="col md-4">
 			<div>
 				<img style="height:100px; width:100px; float:left; background:none #333;" />
 				<p>Blah blah blah</p>
 			</div>
-
 		</div>
-		<div class="col md-1">.col md-1</div>
-		<div class="col md-1">.col md-1</div>
-		<div class="col md-1">.col md-1</div>
-		<div class="col md-1">.col md-1</div>
-		<div class="col md-1">.col md-1</div>
-		<div class="col md-1">.col md-1</div>
-		<div class="col md-1">.col md-1</div>
-		<div class="col md-1">.col md-1</div>
-		<div class="col md-1">.col md-1</div>
-		<div class="col md-1">.col md-1</div>
-		<div class="col md-1">.col md-1</div>
-
+		<div class="col md-4">			<div>
+				<img style="height:100px; width:100px; float:left; background:none #333;" />
+				<p>Blah blah blah</p>
+			</div></div>
+		<div class="col md-4">			<div>
+				<img style="height:100px; width:100px; float:left; background:none #333;" />
+				<p>Blah blah blah</p>
+			</div></div>
 	</div>
 	<div class="row">
-		<div class="col md-6">.col- md-6</div>
-		<div class="col md-6">.col- md-6</div>
-	</div>
-	<div class="row">
-		<div class="col md-4">
-			<div class="row">
-				<div class="col md-6">.col- md-6</div>
-				<div class="col md-6">.col- md-6</div>
-			</div>
-		</div>
-		<div class="col md-4">.col md-4</div>
-		<div class="col md-4">.col md-4</div>
-	</div>
-	<div class="row">
-		<div class="col md-3">.col md-3</div>
-		<div class="col md-3">.col md-3</div>
-		<div class="col md-3">.col md-3</div>
-		<div class="col md-3">.col md-3</div>
+		<div class="col md-3">			<div>
+				<img style="height:100px; width:100px; float:left; background:none #333;" />
+				<p>Blah blah blah</p>
+			</div></div>
+		<div class="col md-3">			<div>
+				<img style="height:100px; width:100px; float:left; background:none #333;" />
+				<p>Blah blah blah</p>
+			</div></div>
+		<div class="col md-3">			<div>
+				<img style="height:100px; width:100px; float:left; background:none #333;" />
+				<p>Blah blah blah</p>
+			</div></div>
+		<div class="col md-3">			<div>
+				<img style="height:100px; width:100px; float:left; background:none #333;" />
+				<p>Blah blah blah</p>
+			</div></div>
 	</div>
 </div>
 
